cros: Remove incorrect DCHECK in lock screen.

It is possible for the PIN to timeout while on the lock screen.

Bug: 855629
Change-Id: Ib23cebdec84bb4713b7fcb78c2f72d6877d6d859
Reviewed-on: https://chromium-review.googlesource.com/1112207
Commit-Queue: Alexander Alekseev <alemate@chromium.org>
Reviewed-by: Alexander Alekseev <alemate@chromium.org>
Cr-Commit-Position: refs/heads/master@{#569899}